--- a/msvc/basis/basis.vcxproj.filters
+++ b/msvc/basis/basis.vcxproj.filters
@@ -69,6 +69,12 @@
     <ClCompile Include="..\..\src\basis_event_loop.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\basis_multiplexer.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\basis_socket_io.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\basis_atomic.h">
@@ -165,6 +171,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\basis_event_loop.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\basis_socket_io.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
